# GS-Careers

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: email.py  signals.py  urls.py  views.py
backend/api/email/: activation.html  email.py  event-mail.html  points.html
backend/api/migrations/: 0001_initial.py  0002_alter_task_type.py  0003_referral.py  0004_referral_expire_date.py  0005_alter_referral_expire_date_and_more.py  0006_config_alter_referral_expire_date.py  0007_alter_category_options_alter_config_int_value_and_more.py  0008_alter_config_name_alter_referral_expire_date.py  0009_userprofile_ref_alter_referral_expire_date.py  0010_alter_referral_expire_date.py  0011_alter_referral_expire_date_alter_userprofile_ref.py  0012_alter_referral_expire_date_alter_userprofile_ref.py  0013_task_title_alter_referral_expire_date.py  0014_alter_referral_expire_date_alter_task_category.py  0015_alter_referral_expire_date.py  0016_question_alter_referral_expire_date.py  0017_alter_question_question_alter_referral_expire_date.py  0018_alter_question_answers_alter_question_rewards_and_more.py  0019_alter_referral_expire_date_alter_task_type.py  0020_alter_referral_expire_date.py  0021_alter_referral_expire_date.py
backend/api/models/: __init__.py  category.py  config.py  contest.py  question.py  referral.py  task.py  user.py
backend/api/serializers/: __init__.py  question.py  task.py  user.py  user_profile.py
backend/backend/: settings.py  urls.py
gs-frontend/: package-lock.json  package.json
gs-frontend/src/: App.js
(+20 files in other folders)
